--- a/payment/views/home.ejs
+++ b/payment/views/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<title>Stripe Payment Demo</title> 
+<title>Donations</title> 
 <style>
 	body{
 		height: 100vh;
@@ -26,8 +26,8 @@
 </head> 
 
 <body> 
-	<h3>Welcome to Payment Gateway</h3> 
-
+	<h3>Welcome to Donation Center</h3> 
+    <h4>Donate Rs.25000</h4>
 	<form action="payment" method="POST"> 
 
 
