--- a/payment/views/index.html
+++ b/payment/views/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="head">
-        <h1>BLOOD UNITE FUND DONATION</h1>
-    </div>
-    <div class="button">
-        
+    <div class="container">
+        <div class="bank">
+            <img id="img01" class="maximg" src="pg.png" alt="Payment Gateway Icon png">
+        </div>
+        <div class="header">
+            <h1><strong>COSMOS REDSHIFT FOUNDATION</strong></h1>
+        </div>
     </div>
 </body>
 </html>
