--- a/payment/views/style.css
+++ b/payment/views/style.css
@@ -1,4 +1,31 @@
-.head
+body
 {
-    
+    background-image: url('./galaxy2.jpg');
+    background-size: cover;
+    background-repeat:no-repeat;
 }
+.container
+{
+    display: flex;
+}
+.bank
+{
+    background: rgba(0, 151, 106, 0.3); 
+    flex: 30%;
+    padding: 5px;
+    text-align:right; 
+}
+.maximg
+{
+    height:200px;
+}
+.header { 
+    background: rgba(0, 151, 106, 0.3); 
+    flex: 70%;
+    padding: 5px;
+    text-align:left; 
+} 
+.header h1 { 
+    padding:50px;
+    color:#7084ff; 
+} 
