--- a/payment/views/home.ejs
+++ b/payment/views/home.ejs
@@ -38,7 +38,7 @@
 		data-amount="250000" 
 		data-currency="inr" 
 		data-name="Saurabh Singh" 
-		data-description="Donation to UNICEF" 
+		data-description="Donation to COSMOS REDSHIFT" 
 		data-locale="auto" > 
 		</script> 
 	</form> 
