--- a/payment/views/index.html
+++ b/payment/views/index.html
@@ -16,5 +16,38 @@
             <h1><strong>COSMOS REDSHIFT FOUNDATION</strong></h1>
         </div>
     </div>
+    <div class="mid"> -->
+        <div class="direction">
+            <img id="img02" class="clickimg" src="right.png" alt="Click Right Here png">
+        </div>
+        <div class="card">
+            
+
+<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+
+
+
+<form action="" method="POST">
+<script
+    src="https://checkout.razorpay.com/v1/checkout.js"
+    data-key="rzp_test_PER9jA38xyBLSo" 
+    data-amount="100" 
+    data-currency="INR"
+    data-id="<?php echo 'OID'.rand(10,100).'END';?>"
+    data-buttontext="Pay with Razorpay"
+    data-name="COSMOS REDSHIFT FOUNDATION"
+    data-description="Charity and Donation"
+    data-image="https://traidev.com/img/web-desgin-development.png"
+    data-prefill.name=""
+    data-prefill.email=""
+    data-prefill.contact=""
+    data-theme.color="#F37254"
+></script>
+<input type="hidden" custom="Hidden Element" name="hidden">
+</form>
+
+
+        </div>
+    </div>
 </body>
 </html>
