--- a/payment/views/home.ejs
+++ b/payment/views/home.ejs
@@ -3,31 +3,89 @@
 <head>
 <title>Donations</title> 
 <style>
-	body{
-		height: 100vh;
-		background: #000428;  /* fallback for old browsers */
-		background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
-		background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	}
-	h3{
-		color: #fff;
-		text-align: center;
-	}
-	button{
-	justify-content: center;
-	display: flex;
-	align-items: center;
-	margin-left: 680px;
-	margin-top: 60px;	
-
+body
+{
+    background-image: url('https://wallpaperaccess.com/full/19921.jpg');
+    background-size: cover;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+}
+.container
+{
+    display: flex;
+}
+.bank
+{
+    background: rgba(0, 151, 106, 0.3); 
+    flex: 30%;
+    padding: 5px;
+    text-align:right; 
+}
+.maximg
+{
+    
+    height:200px;
+}
+.header { 
+    background: rgba(0, 151, 106, 0.3); 
+    flex: 70%;
+    padding: 5px;
+    text-align:left; 
+} 
+.header h1 { 
+    padding:50px;
+    color:#7084ff; 
+} 
+.mid
+{
+    display: flex;
+}
+.direction
+{
+    flex:45%;
+    justify-content: center;
+}
+.clickimg
+{
+    height: 160px;
+    float: right;
+    width: 250px;
+}
+.card
+{
+    flex:55%;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    padding: 25px;
+}
+.card button
+{
+    background:rgba(150, 1, 13, 0.445);
+    color:white; 
+    height: 70px;
+    width: 150px;
+    border-radius: 20px;
+    border: 3px solid blue;
 }
 </style>
 
 </head> 
 
 <body> 
-	<h3>Welcome to Donation Center</h3> 
-    <h4>Donate Rs.25000</h4>
+	<div class="container">
+        <div class="bank">
+            <img class="maximg" src="https://www.pngkit.com/png/full/303-3039001_payment-gateway-icon-png-payment-gateway-icon-free.png" alt="Payment Gateway Icon png">
+        </div>
+        <div class="header">
+            <h1><strong>COSMOS REDSHIFT FOUNDATION</strong></h1>
+        </div>
+    </div>
+    <div class="mid">
+        <div class="direction">
+            <img class="clickimg" src="https://img.pngio.com/png-pointing-finger-transparent-pointing-fingerpng-images-pluspng-hand-pointing-png-878_533.png" alt="Click Right Here png">
+        </div>
+        <div class="card">
 	<form action="payment" method="POST"> 
 
 
@@ -42,5 +100,6 @@
 		data-locale="auto" > 
 		</script> 
 	</form> 
+	</div>
 </body> 
 </html>
