--- a/payment/views/index.html
+++ b/payment/views/index.html
@@ -21,6 +21,7 @@
             <img id="img02" class="clickimg" src="right.png" alt="Click Right Here png">
         </div>
         <div class="card">
+            <button>PAY WITH CARD</button>
             
 
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
