--- a/payment/views/style.css
+++ b/payment/views/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url('https://i.imgur.com/0bF1YT9.gif');
+    background-image: url('./universe.jpg');
     background-size: cover;
     background-repeat:no-repeat;
 }
